--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+target/m2e-wtp/web-resources/META-INF/maven/com.ezen/mealkit/pom.properties
